<resources>
    <string name="abandoning_notification_desc_non_pre_reg">"You won't be able to make or receive video calls"</string>
    <string name="abandoning_notification_desc_pre_reg">"You won't be able to make video calls"</string>
    <string name="abandoning_notification_quit">QUIT</string>
    <string name="abandoning_notification_stay">FINISH SETUP</string>
    <string name="abandoning_notification_title">Quit setup?</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_call_ended">Call ended</string>
    <string name="acc_incoming_audio_call_from">Incoming voice call from %1$s. Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="acc_incoming_call_from">Incoming video call from %1$s. Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="action_send_feedback">Help &amp; feedback</string>
    <string name="action_settings">Settings</string>
    <string name="adjust_bokeh_effect_blur_button">Adjust Bokeh effect blur</string>
    <string name="ahd_alert_dismiss_action_label">Dismiss</string>
    <string name="ahd_alert_low_battery_action_turn_off_video">Turn off video</string>
    <string name="ahd_alert_low_battery_description">To talk longer, try turning off your video</string>
    <string name="ahd_alert_low_battery_title">Battery low</string>
    <string name="ahd_alert_low_volume_action_turn_up_volume">Turn up volume</string>
    <string name="ahd_alert_low_volume_description">"Can't hear anything? Try turning your volume up"</string>
    <string name="ahd_alert_low_volume_title">Low volume</string>
    <string name="app_name">Duo</string>
    <string name="ask_call_perm_dialog_body">"To add your Duo call history to your phone's call history, allow Duo to manage &amp; make phone calls."</string>
    <string name="ask_call_perm_dialog_no">No thanks</string>
    <string name="ask_call_perm_dialog_title">Keep track of your Duo calls</string>
    <string name="ask_call_perm_dialog_yes">Allow</string>
    <string name="audio_call_mode_description">Voice call mode</string>
    <string name="audio_message_fail_to_play_message">"Can't play this audio. Call back instead."</string>
    <string name="audio_unsupported_dialog_dismiss">GOT IT</string>
    <string name="audio_unsupported_dialog_text_1">"%s has an old version of Duo that doesn't support voice calls."</string>
    <string name="audio_unsupported_dialog_text_2">Try a video call and ask them to update Duo.</string>
    <string name="audio_unsupported_dialog_title">"%s can't take voice calls yet."</string>
    <string name="background_call_notification_end_call">END CALL</string>
    <string name="background_call_notification_message">Tap to return to the call</string>
    <string name="background_call_notification_title">Ongoing call</string>
    <string name="batched_contact_joined_notification_body_1_5">Open Duo to discover who’s reachable</string>
    <string name="batched_contact_joined_notification_body_2_3_6_7">Start a video call now</string>
    <string name="batched_contact_joined_notification_body_4_8">Open Duo to see who you can reach</string>
    <string name="batched_contact_joined_notification_title_1">New people to video call ✨</string>
    <string name="batched_contact_joined_notification_title_2">More friends are now reachable ⭐️</string>
    <string name="batched_contact_joined_notification_title_3">More friends you can say hi to ✨</string>
    <string name="batched_contact_joined_notification_title_4">Additional friends to video call ⭐️</string>
    <string name="block_user_failed">Unable to block user. Please check the connection and try again.</string>
    <string name="blocked_numbers_activity_label">Blocked numbers</string>
    <string name="blocked_numbers_clear_filter">Clear the search box</string>
    <string name="blocked_numbers_none_text_1">No blocked numbers</string>
    <string name="blocked_numbers_none_text_2">Anyone you block will show up here</string>
    <string name="blocked_numbers_number_added_to_block_list">%s has been blocked</string>
    <string name="blocked_numbers_number_removed_to_block_list">%s has been unblocked</string>
    <string name="blocked_numbers_select_contact">Select a contact</string>
    <string name="blocked_numbers_unblock_no">CANCEL</string>
    <string name="blocked_numbers_unblock_yes">UNBLOCK</string>
    <string name="blocked_numbers_undo">UNDO</string>
    <string name="bokeh_effect_blur_heavy">Heavy blur</string>
    <string name="bokeh_effect_blur_light">Light blur</string>
    <string name="bokeh_effect_blur_medium">Medium blur</string>
    <string name="bokeh_effect_blur_off">Blur off</string>
    <string name="button_disconnect_call">Hang up</string>
    <string name="button_re_record_message">Re-record</string>
    <string name="button_re_record_message_talkback_description">Re-Record a message after the tones</string>
    <string name="button_record_message">Record</string>
    <string name="button_record_message_talkback_description">Record a message after the tones</string>
    <string name="button_send_audio_message">Leave voice message</string>
    <string name="button_send_video_message">Leave video message</string>
    <string name="call_back_button_text">Call now</string>
    <string name="call_continuing_in_audio_mode">Call continuing with video paused</string>
    <string name="call_ended_ice_disconnect">Network error. Please try again.</string>
    <string name="call_from">Call from %s</string>
    <string name="call_incoming_accept">ACCEPT</string>
    <string name="call_incoming_audio_call">Voice call from</string>
    <string name="call_incoming_decline">DECLINE</string>
    <string name="call_incoming_swipe_down_to_decline">Swipe down to decline</string>
    <string name="call_incoming_swipe_to_answer">Swipe up to answer</string>
    <string name="call_incoming_swipe_to_unlock">Swipe up to unlock your phone</string>
    <string name="call_incoming_video_call">Incoming video call</string>
    <string name="call_rating_feedback_option_audio_cut_out">Audio cut out or was choppy</string>
    <string name="call_rating_feedback_option_audio_too_quiet">Audio was too quiet</string>
    <string name="call_rating_feedback_option_detailed">Other</string>
    <string name="call_rating_feedback_option_echo">Could hear my voice echo</string>
    <string name="call_rating_feedback_option_list_header">What was the problem?</string>
    <string name="call_rating_feedback_option_video_blurry">Video was blurry</string>
    <string name="call_rating_feedback_option_video_froze">Video froze or was choppy</string>
    <string name="call_rating_feedback_option_video_too_dark">Video was too dark</string>
    <string name="call_rating_feedback_option_voice_robotic">Voice sounded robotic</string>
    <string name="call_rating_feedback_option_voice_sped_up">Voice sped up</string>
    <string name="call_rating_feedback_skip">SKIP</string>
    <string name="call_rating_feedback_submit">NEXT</string>
    <string name="call_rating_fragment_rating_bad">BAD</string>
    <string name="call_rating_fragment_rating_dismiss">DISMISS</string>
    <string name="call_rating_fragment_rating_good">GOOD</string>
    <string name="call_rating_fragment_title">How was the call quality?</string>
    <string name="callee_is_unavailable">%s is unavailable. Leave a message.</string>
    <string name="callee_unavailable_message">%s is unavailable.</string>
    <string name="camera_live">Your video is visible</string>
    <string name="camera_permission_clip_dialog_message">To send messages, give camera access first.</string>
    <string name="camera_permission_dialog_message">To make video calls, give camera access first.</string>
    <string name="camera_permission_dialog_title">Give camera access</string>
    <string name="camera_switched_to_back">Switched to back camera</string>
    <string name="camera_switched_to_front">Switched to front camera</string>
    <string name="carrier_block_dialog_body">Your carrier may be blocking data from Google Duo. This could cause poor call quality or dropped calls.</string>
    <string name="carrier_block_dialog_title">Poor Connection</string>
    <string name="client_network_error_prompt">Network error. Please check your connection.</string>
    <string name="clip_reply_button_text">Reply</string>
    <string name="close_clip_button_text">Close</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="font_fontFamily_roboto_medium">sans-serif</string>
    <string name="gaia_onboarding_confirm">AGREE</string>
    <string name="gaia_reg_back">BACK</string>
    <string name="gaia_reg_title">Set up Duo with your phone number</string>
    <string name="link_gaia_intro_phone_number">People who know your number can reach you across Google services. Plus, make it easy to find friends by letting Duo sync your contacts. Duo will send you a one time SMS message, carrier rates may apply.</string>
    <string name="registration_phone_title">Your phone number</string>
    <string name="rewards_info_card_description_0">You both get %s through Tez when friends use your link to join Duo. This special offer is valid for a limited time!</string>
    <string name="rewards_info_card_share_link_button">SHARE INVITE LINK</string>
    <string name="rewards_info_card_title_0">Get %s when friends join</string>
    <string name="rewards_info_card_tos">Regional eligibility and terms apply. %1$s.</string>
    <string name="silent_registration_confirm_dialog_negative_button">EDIT NUMBER</string>
    <string name="welcome_pre_reg_accept_button_variation_1_3">Continue</string>
    <string name="welcome_pre_reg_title_variation_1">Get set up for video calls</string>
</resources>