<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="end" android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/call_feedback_button_good" android:text="@string/call_rating_fragment_rating_good" style="@style/TachyonStyleDialogOptionButtonVertical" />
    <Button android:id="@id/call_feedback_button_bad" android:text="@string/call_rating_fragment_rating_bad" style="@style/TachyonStyleDialogOptionButtonVertical" />
    <Button android:id="@id/call_feedback_button_skip" android:text="@string/call_rating_fragment_rating_dismiss" style="@style/TachyonStyleDialogOptionButtonVertical" />
</LinearLayout>