<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:gravity="start|center" android:id="@id/call_feedback_button_skip" android:paddingLeft="0.0dip" android:text="@string/call_rating_fragment_rating_dismiss" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:paddingStart="0.0dip" android:layout_alignParentStart="true" style="@style/TachyonStyleDialogOptionButtonHorizontal" />
    <Button android:id="@id/call_feedback_button_bad" android:text="@string/call_rating_fragment_rating_bad" android:layout_toLeftOf="@id/call_feedback_button_good" android:layout_alignParentTop="true" android:layout_toStartOf="@id/call_feedback_button_good" style="@style/TachyonStyleDialogOptionButtonHorizontal" />
    <Button android:id="@id/call_feedback_button_good" android:text="@string/call_rating_fragment_rating_good" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" style="@style/TachyonStyleDialogOptionButtonHorizontalEnd" />
</RelativeLayout>