<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="12.0dip" card_view:cardCornerRadius="8.0dip" card_view:cardElevation="2.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:background="@color/google_blue_500" android:paddingLeft="24.0dip" android:paddingTop="16.0dip" android:paddingRight="24.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:src="@drawable/gg_illo_mobiledata" android:scaleType="fitCenter" />
            <TextView android:layout_gravity="center" android:id="@id/invite_rewards_card_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rewards_info_card_title_0" style="@style/TachyonInviteRewardsCardTitle" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="24.0dip" android:paddingTop="16.0dip" android:paddingRight="24.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/invite_rewards_card_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="@string/rewards_info_card_description_0" style="@style/TachyonInviteRewardsCardDescription" />
            <TextView android:id="@id/invite_rewards_card_tos" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="18.0dip" android:text="@string/rewards_info_card_tos" style="@style/TachyonInviteRewardsCardDescriptionSecondary" />
            <Button android:layout_gravity="center" android:id="@id/invite_rewards_card_link_button" android:background="@drawable/round_blue_rect_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rewards_info_card_share_link_button" android:drawableLeft="@drawable/quantum_ic_share_white_24" android:drawablePadding="8.0dip" style="@style/TachyonInviteRewardsLinkButton" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>