<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/soft_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/registration_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.google.android.apps.tachyon.ui.common.views.MeasureableScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_above="@id/bottom_bar" android:layout_alignParentTop="true">
            <com.google.android.apps.tachyon.ui.registration.GaiaOnboardingLayout android:layout_width="fill_parent" android:layout_height="wrap_content" custom:bottomPaddingMin="@dimen/gaia_onboarding_min_bottom_padding" custom:childMarginXMin="24.0dip" custom:childWidthMax="@dimen/gaia_onboarding_max_width" custom:contentMarginTopMin="@dimen/gaia_onboarding_min_inner_padding" custom:contentMarginTopPercent="0.08" custom:descriptionMarginTopMin="@dimen/gaia_onboarding_min_inner_padding" custom:descriptionMarginTopPercent="0.05" custom:titleMarginTopMin="@dimen/gaia_onboarding_min_top_padding" custom:titleMarginTopPercent="0.2">
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/gaia_onboarding_title_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/gaia_onboarding_title_text_size" android:textColor="#ff444444" android:layout_gravity="center_horizontal" android:id="@id/gaia_reg_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="@dimen/gaia_onboarding_title_max_width" android:text="@string/gaia_reg_title" android:fontFamily="@string/font_fontFamily_roboto_medium" android:textAlignment="center" />
                </LinearLayout>
                <include layout="@layout/gaia_registration_phone_info" />
                <LinearLayout android:orientation="vertical" android:id="@id/gaia_onboarding_description_wrapper" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/gaia_onboarding_description_text_size" android:id="@id/registration_disclaimer_textview" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/link_gaia_intro_phone_number" style="@style/GaiaTextNormal" />
                    <TextView android:textSize="@dimen/gaia_onboarding_description_text_size" android:linksClickable="true" android:id="@id/registration_tos" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/GaiaTextNormal" />
                </LinearLayout>
            </com.google.android.apps.tachyon.ui.registration.GaiaOnboardingLayout>
        </com.google.android.apps.tachyon.ui.common.views.MeasureableScrollView>
        <RelativeLayout android:id="@id/bottom_bar" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_bar_height" android:layout_alignParentBottom="true">
            <View android:background="@color/soft_black" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_alignParentTop="true" />
            <TextView android:textColor="@color/gaia_blue" android:gravity="center" android:id="@id/registration_back_button" android:layout_width="wrap_content" android:layout_height="@dimen/large_button_height" android:foreground="?selectableItemBackground" android:text="@string/gaia_reg_back" android:paddingStart="@dimen/bottom_bar_button_horizontal_padding" android:paddingEnd="@dimen/bottom_bar_button_horizontal_padding" android:layout_alignParentStart="true" style="@style/GaiaButton" />
            <Button android:theme="@style/PrimaryButtonTheme" android:id="@id/registration_send_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gaia_onboarding_confirm" android:layout_centerVertical="true" android:layout_marginEnd="16.0dip" android:layout_alignParentEnd="true" style="@style/PrimaryButtonStyle" />
        </RelativeLayout>
    </RelativeLayout>
    <ProgressBar android:layout_gravity="center" android:id="@id/registration_spinning_wheel" android:visibility="visible" android:layout_width="60.0dip" android:layout_height="60.0dip" android:progressDrawable="@drawable/circular_progress_bar" />
</FrameLayout>