<?xml version="1.0" encoding="utf-8"?>
<com.google.android.apps.tachyon.ui.rootactivityview.RootActivityView android:background="#8a000000" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/call_rating_activity_primary" android:background="@drawable/round_white_rect" android:paddingLeft="24.0dip" android:paddingTop="18.0dip" android:paddingRight="24.0dip" android:paddingBottom="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="440.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/top_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
                <TextView android:id="@id/title" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/call_rating_feedback_option_list_header" android:layout_alignParentTop="true" style="@style/Tachyon_Feedback_Font_02_Title" />
            </LinearLayout>
            <View android:id="@id/divider_line" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/bottom_panel" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@id/button_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
                    <Button android:id="@id/call_rating_feedback_skip" android:minWidth="0.0dip" android:text="@string/call_rating_feedback_skip" android:layout_toLeftOf="@id/call_rating_feedback_submit" android:layout_toStartOf="@id/call_rating_feedback_submit" style="@style/TachyonStyleDialogOptionButtonHorizontal" />
                    <Button android:id="@id/call_rating_feedback_submit" android:minWidth="0.0dip" android:text="@string/call_rating_feedback_submit" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" style="@style/TachyonStyleDialogOptionButtonHorizontalEnd" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</com.google.android.apps.tachyon.ui.rootactivityview.RootActivityView>