<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@color/common_light_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/header_image" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/welcome_vertical_margin" android:src="@drawable/d2_mountain_06260" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:contentDescription="@null" app:layout_constraintBottom_toTopOf="@id/welcome_activity_intro_primary" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/welcome_watermark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:src="@drawable/duo_watermark" android:scaleType="fitCenter" android:contentDescription="@null" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:id="@id/welcome_activity_intro_primary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/welcome_vertical_spacing" android:text="@string/welcome_pre_reg_title_variation_1" android:layout_marginStart="@dimen/intro_thick_margin" android:layout_marginEnd="@dimen/intro_thick_margin" app:layout_constraintBottom_toTopOf="@id/welcome_activity_silent_reg_text_header" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/TachyonFontSignUp01a" />
    <TextView android:id="@id/welcome_activity_silent_reg_text_header" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/registration_phone_title" android:layout_marginStart="@dimen/intro_thick_margin" android:layout_marginEnd="@dimen/intro_thick_margin" app:layout_constraintBottom_toTopOf="@id/welcome_activity_silent_reg_text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/TachyonFontSignUp08" />
    <TextView android:id="@id/welcome_activity_silent_reg_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:layout_marginStart="@dimen/intro_thick_margin" android:layout_marginEnd="@dimen/intro_thick_margin" app:layout_constraintBottom_toTopOf="@id/divider" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/TachyonFontSignUp17" />
    <View android:id="@id/divider" android:layout_width="0.0dip" android:layout_marginBottom="@dimen/welcome_vertical_spacing" android:layout_marginStart="@dimen/intro_thick_margin" android:layout_marginEnd="@dimen/intro_thick_margin" app:layout_constraintBottom_toTopOf="@id/welcome_activity_intro_agreements" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/HorizontalDivider" />
    <TextView android:id="@id/welcome_activity_intro_agreements" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/welcome_vertical_spacing" android:layout_marginStart="@dimen/intro_thick_margin" android:layout_marginEnd="@dimen/intro_thick_margin" app:layout_constraintBottom_toTopOf="@id/welcome_agree_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/TachyonFontSignUp08" />
    <Button android:id="@id/welcome_unregister_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silent_registration_confirm_dialog_negative_button" android:layout_marginEnd="16.0dip" app:layout_constraintBaseline_toBaselineOf="@id/welcome_agree_button" app:layout_constraintEnd_toStartOf="@id/welcome_agree_button" style="@style/FlatButtonStyle" />
    <Button android:theme="@style/PrimaryButtonTheme" android:id="@id/welcome_agree_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/welcome_vertical_margin" android:text="@string/welcome_pre_reg_accept_button_variation_1_3" android:layout_marginEnd="@dimen/intro_thick_margin" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" style="@style/PrimaryButtonStyle" />
</android.support.constraint.ConstraintLayout>